# libserial

./: .gitignore  CMakeLists.txt  CMakeListsDeb.txt  ChangeLog  LICENSE  README.mkd
conf/: CMakeLists.txt  libserial.conf  libserial.pc
debian/: changelog  control  libplanar-dev.install  libplanar.install  rules
source/: CMakeLists.txt  debug.cpp  debug.h  debug_client.cpp  debug_client.h  debug_serial.cpp  debug_serial.h  program_options.cpp  program_options.h  serial_connection.cpp  serial_connection.h  serial_receive.cpp  serial_receive.h  serial_send.cpp  serial_send.h  serial_server.cpp  serial_server.h  state_client.cpp  state_client.h  state_client_wrap.cpp  state_client_wrap.h  types_serial.h
